hphp/hack/test/typecheck/typedef_bad_error_message.php
<?hh // strict

type Blah<T> = Vector<T>;

function f(): Blah<int> {
  return Vector { 'hi' };
}
